src/test/deca/codegen/valid/print/uniquePrint.deca
// Description :
// test du print
// Resultat :
// Hello World

{
    print("Hello World") ;
}
