src/test/deca/codegen/invalid/op_on_null.deca
// Description:
//  Verif div par zero
//
// Résultat:
//  Erreur

class A{

  void printA(){
    print("A");
  }

}
 {
 A test;
 test.printA();
 }
